@@ -994,6 +994,19 @@ f.addStep(ShellCommand(
                                    "/home/buildbot/lib/python"] @}))
 @end example
 
+Those variables support expansion so that if you just want to prepend
+@file{/home/buildbot/bin} to the PATH environment variable, you can do
+it by putting the value @code{$@{PATH@}} at the end of the string like
+in the example below. Variables that doesn't exists on the slave will be
+replaced by @code{""}.
+
+
+@example
+f.addStep(ShellCommand(
+              command=["make", "test"],
+              env=@{'PATH': "/home/buildbot/bin:${PATH}"@}))
+@end example
+
 @item want_stdout
 if False, stdout from the child process is discarded rather than being
 sent to the buildmaster for inclusion in the step's LogFile.
